// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`导出层黄金快照 · Ren'Py bundle 整文件 > definitions.rpy 整文件对拍 1`] = `
"# ============================================================
# ScriptWeaver - definitions.rpy
# 通道注册 / 角色声明 / image 声明 / position transforms
# ============================================================

# ---- 音频通道注册 ----
init python:
    renpy.music.register_channel("ambient", "sfx", loop=True, stop_on_mute=False)

# ---- 位置/缩放通用 Transform ----
transform sw_pos(xpos, ypos, zoom=1.0):
    xpos xpos
    ypos ypos
    xanchor 0.5
    yanchor 1.0
    zoom zoom

transform sw_zoom(z):
    zoom z

# ---- 自定义特效 Transform 库 ----
transform push:
    xpos 1.0
    linear 0.4 xpos 0.0

# ---- Character 声明 ----
define alice = Character("Alice", color="#ff6688")
define bob = Character("Bob")

# ---- 全局变量声明（default）----
default trust = 0

# ---- 立绘 Image 声明 ----
image alice smile = "images/sprite/alice_smile.png"
image bob smile = "images/sprite/bob_smile.png"

# ---- 背景 Image 声明 ----
image bg_room = "images/background/bg_room.png"

# ---- 音频引用说明 ----
# 音频通过 play 语句按路径引用 game/audio/ 目录下的素材，无需 image 声明。
# 导出项目包时，音频文件会被自动复制进 game/audio/。
"
`;

exports[`导出层黄金快照 · Ren'Py bundle 整文件 > script.rpy 整文件对拍 1`] = `
"# Generated by ScriptWeaver
# 4 lines

label start:
    scene bg_room with dissolve
    show alice smile at center zorder 5
    play music "audio/bgm1.ogg" loop
    voice "audio/voice_alice.ogg"
    alice "Hi there."
    # L1

    show bob smile at right zorder 5 with push
    stop music fadeout 1
    play sound "audio/se1.ogg"
    bob "Hello!"
    # L2

    hide alice
    hide bob
    "The end."
    # L3

    show alice smile at sw_pos(0.3, 0.6, 1.2) zorder 3
    alice "Zoomed in."
    # L4
    return
"
`;

exports[`导出层黄金快照 · Ren'Py bundle 整文件 > transforms.rpy 整文件对拍 1`] = `
"# ============================================================
# ScriptWeaver - transforms.rpy
# 时间轴挂载特效 → 参数化 ATL transform（自动生成，请勿手改）
# 由 rpyExporter 依据挂载实例的参数规格产出，保证编译零报错。
# ============================================================

# （本剧本未挂载任何需要自定义 transform 的特效）"
`;

exports[`导出层黄金快照 · Web 导出 gameJson > gameJson 整文件对拍 1`] = `
"{
  "version": 1,
  "title": "ScriptWeaver",
  "canvasRatio": {
    "w": 16,
    "h": 9
  },
  "assetMap": {
    "bg_room": {
      "src": "assets/images/background/bg_room.png",
      "type": "background",
      "name": "room"
    },
    "a_smile": {
      "src": "assets/images/sprite/alice_smile.png",
      "type": "sprite",
      "name": "a"
    },
    "v_alice": {
      "src": "assets/audio/voice_alice.ogg",
      "type": "audio",
      "name": "v"
    },
    "bgm1": {
      "src": "assets/audio/bgm1.ogg",
      "type": "audio",
      "name": "bgm"
    },
    "b_smile": {
      "src": "assets/images/sprite/bob_smile.png",
      "type": "sprite",
      "name": "b"
    },
    "se1": {
      "src": "assets/audio/se1.ogg",
      "type": "audio",
      "name": "se"
    }
  },
  "variables": [
    {
      "name": "trust",
      "type": "number",
      "initial": 0
    }
  ],
  "charactersMeta": {
    "alice": {
      "displayName": "Alice",
      "dialogueColor": "#ff6688"
    },
    "bob": {
      "displayName": "Bob"
    }
  },
  "lines": [
    {
      "line_id": "L1",
      "speaker": "alice",
      "dialogue": "Hi there.",
      "background": {
        "asset_id": "bg_room",
        "transition": "dissolve"
      },
      "characters": {
        "c1": {
          "asset_id": "a_smile",
          "position_slot": "center"
        }
      },
      "audio": {
        "voice": "v_alice",
        "se": [],
        "bgm": {
          "asset_id": "bgm1",
          "loop": true,
          "volume": 0.6
        },
        "ambient": null
      },
      "line_type": "dialogue"
    },
    {
      "line_id": "L2",
      "speaker": "bob",
      "dialogue": "Hello!",
      "background": {
        "asset_id": "bg_room",
        "transition": "dissolve"
      },
      "characters": {
        "c1": {
          "asset_id": "a_smile",
          "position_slot": "center"
        },
        "c2": {
          "asset_id": "b_smile",
          "position_slot": "right"
        }
      },
      "audio": {
        "voice": null,
        "se": [
          "se1"
        ],
        "bgm": {
          "asset_id": "bgm1",
          "loop": true,
          "volume": 0.6
        },
        "ambient": null
      },
      "line_type": "dialogue"
    },
    {
      "line_id": "L3",
      "speaker": null,
      "dialogue": "The end.",
      "background": {
        "asset_id": "bg_room",
        "transition": "dissolve"
      },
      "characters": {
        "c1": {
          "asset_id": "a_smile",
          "position_slot": "center"
        },
        "c2": {
          "asset_id": "b_smile",
          "position_slot": "right"
        }
      },
      "audio": {
        "voice": null,
        "se": [],
        "bgm": {
          "asset_id": "bgm1",
          "loop": true,
          "volume": 0.6
        },
        "ambient": null
      },
      "line_type": "dialogue"
    },
    {
      "line_id": "L4",
      "speaker": "alice",
      "dialogue": "Zoomed in.",
      "background": {
        "asset_id": "bg_room",
        "transition": "dissolve"
      },
      "characters": {
        "c1": {
          "asset_id": "a_smile",
          "position_slot": "center",
          "pos_x": 0.3,
          "pos_y": 0.6,
          "scale": 1.2
        },
        "c2": {
          "asset_id": "b_smile",
          "position_slot": "right"
        }
      },
      "audio": {
        "voice": null,
        "se": [],
        "bgm": {
          "asset_id": "bgm1",
          "loop": true,
          "volume": 0.6
        },
        "ambient": null
      },
      "line_type": "dialogue"
    }
  ]
}"
`;

exports[`导出层黄金快照 · 多语言翻译骨架 > chinese 翻译骨架整文件对拍 1`] = `
"# Generated by ScriptWeaver
# Translation language: chinese
# 该文件应放置于 game/tl/chinese/script.rpy
translate chinese start:
    # 将每行右侧（new）替换为对应语言译文，左侧（old）保持原文勿改
    alice "Hi there." --> "Hi there."
    bob "Hello!" --> "Hello!"
    "The end." --> "The end."
    alice "Zoomed in." --> "Zoomed in."
"
`;

exports[`导出层黄金快照 · 挂载特效转 Ren'Py > 特效 transforms 整文件对拍 1`] = `
"# ============================================================
# ScriptWeaver - transforms.rpy
# 时间轴挂载特效 → 参数化 ATL transform（自动生成，请勿手改）
# 由 rpyExporter 依据挂载实例的参数规格产出，保证编译零报错。
# ============================================================

transform sw_custom_shake(duration=0.6, amplitude=10):
    xoffset 0
    linear (duration / 4.0) xoffset -amplitude
    linear (duration / 4.0) xoffset amplitude
    linear (duration / 4.0) xoffset -amplitude
    linear (duration / 4.0) xoffset 0

transform sw_custom_blink(frequency=2, minAlpha=0.2):
    repeat:
        alpha 1.0
        linear (0.5 / frequency) alpha minAlpha
        linear (0.5 / frequency) alpha 1.0
"
`;

exports[`导出层黄金快照 · 挂载特效转 Ren'Py > 特效脚本整文件对拍 1`] = `
"# Generated by ScriptWeaver
# 1 lines

label start:
    scene bg_room with dissolve(0.5)
    show alice smile at center, sw_custom_shake(duration=0.5, amplitude=10), sw_custom_blink(frequency=2, minAlpha=0.2) zorder 5
    alice "震起来！"
    # L1
    return
"
`;

exports[`导出层黄金快照 · 选择支（menu + 变量操作） > 选择支行导出整文件对拍 1`] = `
"# Generated by ScriptWeaver
# 5 lines

label start:
    $ step = 1
    menu:
        "你要怎么做？"
        "前进":
            $ trust += 1
            jump start
        "撤退" if trust >= 5:
            # [ScriptWeaver] 跳转目标 "retreat" 未定义，已安全降级
            return
    # C0

    scene bg_room with dissolve
    show alice smile at center zorder 5
    play music "audio/bgm1.ogg" loop
    voice "audio/voice_alice.ogg"
    alice "Hi there."
    # L1

    show bob smile at right zorder 5 with push
    stop music fadeout 1
    play sound "audio/se1.ogg"
    bob "Hello!"
    # L2

    hide alice
    hide bob
    "The end."
    # L3

    show alice smile at sw_pos(0.3, 0.6, 1.2) zorder 3
    alice "Zoomed in."
    # L4
    return
"
`;
